Bug 476016 - KDE Crashes When Dragging And Dropping A Folder Into The Projects Side Panel After Another Folder Was Already Added
Summary: KDE Crashes When Dragging And Dropping A Folder Into The Projects Side Panel ...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Manjaro Linux
: NOR crash
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2023-10-23 18:53 UTC by starcastle550
Modified: 2023-10-25 14:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description starcastle550 2023-10-23 18:53:50 UTC
Application: kate (23.08.2)

Qt Version: 5.15.11
Frameworks Version: 5.111.0
Operating System: Linux 6.1.59-1-MANJARO x86_64
Windowing System: X11
Distribution: Manjaro Linux
DrKonqi: 5.27.8 [KCrashBackend]

-- Information about the crash:
I'm wanting to copy the risu's 'tiled quicklaunch' grid code onto the favorites portion of the standard 'kickoff menu' (application launcher). So I was trying to figure out how to get Kate to show both project's directories at the same, in order to quickly jump between their files while studing their code. Seeing as I couldn't find a way to accomplish this via the Folders panel, I tried to add them both to the Projects panel. The first directory dropped into the panel just fine; opening up every file in every subdirectory as well. I then dragged and dropped the second directory into the Projects panel, when this abrubpt crash occurred...

The reporter is unsure if this crash is reproducible.

-- Backtrace:
Application: Kate (kate), signal: Segmentation fault
Content of s_kcrashErrorMessage: std::unique_ptr<char []> = {get() = <optimized out>}
[KCrash Handler]
#6  0x00007f9f50969a20 in std::__atomic_base<int>::load(std::memory_order) const (__m=std::memory_order_relaxed, this=<optimized out>) at /usr/include/c++/13.2.1/bits/atomic_base.h:505
#7  QAtomicOps<int>::loadRelaxed<int>(std::atomic<int> const&) (_q_value=<optimized out>) at ../../include/QtCore/../../src/corelib/thread/qatomic_cxx11.h:239
#8  QBasicAtomicInteger<int>::loadRelaxed() const (this=<optimized out>) at ../../include/QtCore/../../src/corelib/thread/qbasicatomic.h:107
#9  QtPrivate::RefCount::ref() (this=<optimized out>) at ../../include/QtCore/../../src/corelib/tools/qrefcount.h:55
#10 QString::operator=(QString const&) (this=this@entry=0x7ffdf9edb220, other=...) at text/qstring.cpp:2407
#11 0x00007f9f3dda1866 in KateProjectModel::dropMimeData(QMimeData const*, Qt::DropAction, int, int, QModelIndex const&) (this=0x55a796703ef8, data=0x7f9f380026d0, row=<optimized out>, column=<optimized out>, parent=..., action=<optimized out>) at /usr/src/debug/kate/kate-23.08.2/addons/project/kateproject.cpp:52
#12 0x00007f9f50a686a7 in QAbstractProxyModel::dropMimeData(QMimeData const*, Qt::DropAction, int, int, QModelIndex const&) (this=<optimized out>, data=0x7f9f380026d0, action=Qt::CopyAction, row=<optimized out>, column=<optimized out>, parent=<optimized out>) at itemmodels/qabstractproxymodel.cpp:450
#13 0x00007f9f519deafc in QAbstractItemView::dropEvent(QDropEvent*) (this=0x55a795388270, event=0x7ffdf9edb790) at itemviews/qabstractitemview.cpp:2138
#14 0x00007f9f517af1b5 in QWidget::event(QEvent*) (this=0x55a795388270, event=0x7ffdf9edb790) at kernel/qwidget.cpp:8872
#15 0x00007f9f5185d9d3 in QFrame::event(QEvent*) (this=0x55a795388270, e=0x7ffdf9edb790) at widgets/qframe.cpp:550
#16 0x00007f9f50a99142 in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) (receiver=receiver@entry=0x55a796605140, event=event@entry=0x7ffdf9edb790) at kernel/qcoreapplication.cpp:1190
#17 0x00007f9f517788ef in QApplicationPrivate::notify_helper(QObject*, QEvent*) (this=this@entry=0x55a7948e8100, receiver=receiver@entry=0x55a796605140, e=e@entry=0x7ffdf9edb790) at kernel/qapplication.cpp:3634
#18 0x00007f9f5177d852 in QApplication::notify(QObject*, QEvent*) (this=<optimized out>, receiver=<optimized out>, e=0x7ffdf9edb790) at kernel/qapplication.cpp:3386
#19 0x00007f9f50a9c168 in QCoreApplication::notifyInternal2(QObject*, QEvent*) (receiver=0x55a796605140, event=0x7ffdf9edb790) at kernel/qcoreapplication.cpp:1064
#20 0x00007f9f50a9c1b7 in QCoreApplication::forwardEvent(QObject*, QEvent*, QEvent*) (receiver=<optimized out>, event=<optimized out>, originatingEvent=<optimized out>) at kernel/qcoreapplication.cpp:1079
#21 0x00007f9f517cf58a in QWidgetWindow::handleDropEvent(QDropEvent*) (event=0x7ffdf9edb930, this=0x55a7958b4670) at kernel/qwidgetwindow.cpp:986
#22 QWidgetWindow::event(QEvent*) (this=0x55a7958b4670, event=0x7ffdf9edb930) at kernel/qwidgetwindow.cpp:342
#23 0x00007f9f517788ff in QApplicationPrivate::notify_helper(QObject*, QEvent*) (this=<optimized out>, receiver=0x55a7958b4670, e=0x7ffdf9edb930) at kernel/qapplication.cpp:3640
#24 0x00007f9f50a9c168 in QCoreApplication::notifyInternal2(QObject*, QEvent*) (receiver=0x55a7958b4670, event=0x7ffdf9edb930) at kernel/qcoreapplication.cpp:1064
#25 0x00007f9f50a9c1d3 in QCoreApplication::sendEvent(QObject*, QEvent*) (receiver=<optimized out>, event=<optimized out>) at kernel/qcoreapplication.cpp:1462
#26 0x00007f9f50f4946f in QGuiApplicationPrivate::processDrop(QWindow*, QMimeData const*, QPoint const&, QFlags<Qt::DropAction>, QFlags<Qt::MouseButton>, QFlags<Qt::KeyboardModifier>) (w=0x55a7958b4670, dropData=<optimized out>, p=<optimized out>, supportedActions=..., buttons=..., modifiers=...) at kernel/qguiapplication.cpp:3333
#27 0x00007f9f50f29f26 in QWindowSystemInterface::handleDrop(QWindow*, QMimeData const*, QPoint const&, QFlags<Qt::DropAction>, QFlags<Qt::MouseButton>, QFlags<Qt::KeyboardModifier>) (window=0x55a7958b4670, dropData=dropData@entry=0x7f9f380026d0, p=..., supportedActions=supportedActions@entry=..., buttons=buttons@entry=..., modifiers=...) at kernel/qwindowsysteminterface.cpp:938
#28 0x00007f9f4a9439d1 in QXcbDrag::handleDrop(QPlatformWindow*, xcb_client_message_event_t const*, QFlags<Qt::MouseButton>, QFlags<Qt::KeyboardModifier>) (this=0x55a794b0a150, event=<optimized out>, b=..., mods=...) at /usr/src/debug/qt5-base/qtbase/src/plugins/platforms/xcb/qxcbdrag.cpp:1072
#29 0x00007f9f4a90628a in QXcbConnection::handleXcbEvent(xcb_generic_event_t*) (this=this@entry=0x55a79490d3c0, event=event@entry=0x55a7996f0050) at /usr/src/debug/qt5-base/qtbase/src/plugins/platforms/xcb/qxcbconnection.cpp:640
#30 0x00007f9f4a90a5b0 in QXcbConnection::processXcbEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x55a79490d3c0, flags=...) at /usr/src/debug/qt5-base/qtbase/src/plugins/platforms/xcb/qxcbconnection.cpp:1063
#31 0x00007f9f4a92f5d8 in xcbSourceDispatch(GSource*, GSourceFunc, gpointer) (source=<optimized out>) at /usr/src/debug/qt5-base/qtbase/src/plugins/platforms/xcb/qxcbeventdispatcher.cpp:103
#32 0x00007f9f4e30df19 in g_main_dispatch (context=0x7f9f40000e40) at ../glib/glib/gmain.c:3476
#33 0x00007f9f4e36c2b7 in g_main_context_dispatch_unlocked (context=0x7f9f40000e40) at ../glib/glib/gmain.c:4284
#34 g_main_context_iterate_unlocked.isra.0 (context=context@entry=0x7f9f40000e40, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/glib/gmain.c:4349
#35 0x00007f9f4e30c112 in g_main_context_iteration (context=0x7f9f40000e40, may_block=1) at ../glib/glib/gmain.c:4414
#36 0x00007f9f50aeaf7c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x55a794b302b0, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#37 0x00007f9f50a9ae74 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7ffdf9edbea0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#38 0x00007f9f50a9c313 in QCoreApplication::exec() () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#39 0x00007f9f50f3bf02 in QGuiApplication::exec() () at kernel/qguiapplication.cpp:1870
#40 0x00007f9f51776cda in QApplication::exec() () at kernel/qapplication.cpp:2832
#41 0x000055a79305b60e in main(int, char**) (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/kate/kate-23.08.2/apps/kate/main.cpp:609
[Inferior 1 (process 102783) detached]

Reported using DrKonqi
Comment 1 Waqar Ahmed 2023-10-25 14:05:09 UTC
Git commit 4c6e2f7b14efd37ea7d42ebf9fad2e9695edbd3e by Waqar Ahmed.
Committed on 25/10/2023 at 16:04.
Pushed by waqar into branch 'master'.

Fix crash on dropping file in project

M  +1    -0    addons/project/kateproject.cpp

https://invent.kde.org/utilities/kate/-/commit/4c6e2f7b14efd37ea7d42ebf9fad2e9695edbd3e
Comment 2 Waqar Ahmed 2023-10-25 14:06:10 UTC
Git commit 6b2165f2dda73fd7fed9e5586956fc9d403663cd by Waqar Ahmed.
Committed on 25/10/2023 at 16:05.
Pushed by waqar into branch 'release/23.08'.

Fix crash on dropping file in project
(cherry picked from commit 4c6e2f7b14efd37ea7d42ebf9fad2e9695edbd3e)

M  +1    -0    addons/project/kateproject.cpp

https://invent.kde.org/utilities/kate/-/commit/6b2165f2dda73fd7fed9e5586956fc9d403663cd