Fix crash on dropping file in project

BUG: 476016